transpiler/src/test/resources/smoke/errors/output/cpp/include/smoke/Errors.h
// -------------------------------------------------------------------------------------------------
//
//
// -------------------------------------------------------------------------------------------------
//
// Automatically generated. Do not modify. Your changes will be lost.
//
// -------------------------------------------------------------------------------------------------

#pragma once

#include "ErrorCode.h"

namespace smoke {

class Errors {
public:
    virtual ~Errors() = 0;
public:
enum class InternalError {
    ERROR_NONE,
    ERROR_FATAL
};

public:
static ::hf::ErrorCode method_with_errors(  );
};

}
